# AtomicGameEngine

Script/AtomicNET/AtomicNET/Application/: NETIPCPlayerApp.cs
Script/AtomicNET/AtomicPlayer/: Program.cs
Source/: CMakeLists.txt
Source/AtomicEditor/: CMakeLists.txt
Source/AtomicNET/NETNative/: NETEventDispatcher.cpp
